Added indexing of action trasnactions
